[package]
name = "p99_updater"
version = "0.1.0"
authors = ["Corecii <corecii@corecii.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await",  "nightly"] }
futures-util-preview = { version = "=0.3.0-alpha.18" }
futures-timer = "0.3"
hyper = { version = "=0.13.0-alpha.2", features = ["unstable-stream"]}
hyper-tls = { version = "=0.4.0-alpha.2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = "=1.8.4"
select = "0.4.3"
tendril = "0.4.1"
zip = "0.5.3"
bytes = "0.4.12"